--- a/src/components/rednavBar/rednav.css
+++ b/src/components/rednavBar/rednav.css
@@ -113,7 +113,7 @@
     background-color: #841d2e;
   }
   .red-head {
-    padding: 10px 50px;
+    padding: 12px 5%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -128,7 +128,7 @@
     display: flex;
     justify-content: start;
     text-align: center;
-    width: 20%;
+    /* width: 20%; */
     color: #c6979f;
   }
   .white-text {
