--- a/src/components/courses/Courses.css
+++ b/src/components/courses/Courses.css
@@ -2,7 +2,7 @@
 @media only screen and (max-width: 600px) {
   .course-container {
     padding: 10px 20px;
-    padding-top: 5rem;
+    /* padding-top: 5rem; */
   }
   .titleBar {
     padding-bottom: 10px;
@@ -150,7 +150,7 @@
 @media only screen and (min-width: 600px) {
   .course-container {
     padding: 10px 20px;
-    padding-top: 5rem;
+    /* padding-top: 5rem; */
   }
   .titleBar {
     padding-bottom: 10px;
