--- a/src/components/content/content.css
+++ b/src/components/content/content.css
@@ -12,8 +12,6 @@
   }
   .content-part2 {
     padding: 20px;
-    /* overflow-y: auto; */
-    /* max-height: 100vh; */
   }
 
   .secondary-arrow-styles {
@@ -66,6 +64,9 @@
     border: none;
     cursor: pointer;
     border-radius: 30px;
+  }
+  .secondary-paragraph.coloured-padding {
+    padding: 0px;
   }
 }
 
@@ -138,6 +139,9 @@
     border: none;
     cursor: pointer;
     border-radius: 30px;
+  }
+  .secondary-paragraph.coloured-padding {
+    padding: 0px;
   }
 }
 
@@ -213,6 +217,9 @@
     cursor: pointer;
     border-radius: 30px;
   }
+  .secondary-paragraph.coloured-padding {
+    padding: 0px;
+  }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
@@ -287,6 +294,9 @@
     cursor: pointer;
     border-radius: 30px;
   }
+  .secondary-paragraph.coloured-padding {
+    padding: 0px;
+  }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
@@ -306,8 +316,6 @@
   }
   .content-part2 {
     padding: 20px;
-    /* overflow-y: auto; */
-    /* max-height: 100vh; */
   }
   .button {
     display: flex;
@@ -360,5 +368,8 @@
     border: none;
     cursor: pointer;
     border-radius: 30px;
+  }
+  .secondary-paragraph.coloured-padding {
+    padding: 0px;
   }
 }
