--- a/src/components/staticHome/statichome.css
+++ b/src/components/staticHome/statichome.css
@@ -594,13 +594,13 @@
   }
 
   .portion-1 {
-    padding-right: 80px;
-    padding-left: 20px;
-    width: 40%;
+    /* padding-right: 80px;
+    padding-left: 20px; */
+    width: 25% !important;
   }
 
   .portion-2 {
-    width: 60%;
+    width: 75%;
   }
 
   .bottom-portion {
@@ -706,4 +706,8 @@
     height: 100%;
     object-fit: contain;
   }
+}
+
+.no-padding {
+  padding: 0 !important;
 }
