--- a/src/components/navBar/navBar.css
+++ b/src/components/navBar/navBar.css
@@ -2,8 +2,8 @@
 @media only screen and (max-width: 600px) {
   .nav-bar {
     display: flex;
-    justify-content: center;
-    /* padding: 10px; */
+    justify-content: space-between;
+    padding: 10px;
   }
   .button-search-wrapper,
   .search-icon-text,
@@ -24,7 +24,7 @@
     justify-content: space-between;
     gap: 5px;
     align-items: center;
-    padding: 10px 70px;
+    padding: 10px 0px;
   }
 
   .mobile-search {
