--- a/src/components/coursestrutureSection/coursestrutureSection.css
+++ b/src/components/coursestrutureSection/coursestrutureSection.css
@@ -1,17 +1,17 @@
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-    .content-container {
+    .semester-content-container {
         display: flex;
         flex-direction: column;
         padding: 20px;
     }
 
-    .content-part1 {
+    .semester-content-part1 {
         padding: 20px;
         position: relative;
     }
 
-    .content-part2 {
+    .semester-content-part2 {
         padding: 20px;
         /* overflow-y: auto; */
         /* max-height: 100vh; */
@@ -29,7 +29,7 @@
         cursor: pointer;
     }
 
-    .content-portion {
+    .semester-content-portion {
         display: flex;
         flex-direction: column;
         margin-top: 30px;
@@ -39,7 +39,7 @@
         font-family: "Montserrat", sans-serif;
     }
 
-    .content-question {
+    .semester-content-question {
         font-weight: 600;
         font-size: 20px;
         display: flex;
@@ -49,7 +49,7 @@
         cursor: pointer;
     }
 
-    .content-answer {
+    .semester-content-answer {
         padding: 10px 0 20px;
         font-size: 20px;
         font-weight: 400;
@@ -75,23 +75,32 @@
         border: none;
         cursor: pointer;
         border-radius: 30px;
+    }
+
+    .sem-acc {
+        display: grid;
+        gap: 25px;
+    }
+
+    .sub-answer-paragraph {
+        padding: 15px 0px;
     }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
-    .content-container {
+    .semester-content-container {
         display: flex;
         flex-direction: column;
         padding: 20px;
     }
 
-    .content-part1 {
+    .semester-content-part1 {
         padding: 20px;
         position: relative;
     }
 
-    .content-part2 {
+    .semester-content-part2 {
         padding: 20px;
         /* overflow-y: auto; */
         /* max-height: 100vh; */
@@ -109,7 +118,7 @@
         cursor: pointer;
     }
 
-    .content-portion {
+    .semester-content-portion {
         display: flex;
         flex-direction: column;
         margin-top: 30px;
@@ -119,7 +128,7 @@
         font-family: "Montserrat", sans-serif;
     }
 
-    .content-question {
+    .semester-content-question {
         font-weight: 600;
         font-size: 20px;
         display: flex;
@@ -129,7 +138,7 @@
         cursor: pointer;
     }
 
-    .content-answer {
+    .semester-content-answer {
         padding: 10px 0 20px;
         font-size: 20px;
         font-weight: 400;
@@ -156,12 +165,21 @@
         border: none;
         cursor: pointer;
         border-radius: 30px;
+    }
+
+    .sem-acc {
+        display: grid;
+        gap: 25px;
+    }
+
+    .sub-answer-paragraph {
+        padding: 12px 0px;
     }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-    .content-container {
+    .semester-content-container {
         background-color: #fff;
         display: grid;
         padding: 40px 70px;
@@ -171,12 +189,12 @@
         overflow: hidden;
     }
 
-    .content-part1 {
+    .semester-content-part1 {
         padding: 20px;
         position: relative;
     }
 
-    .content-part2 {
+    .semester-content-part2 {
         padding: 20px;
         /* overflow-y: auto; */
         /* max-height: 100vh; */
@@ -186,6 +204,7 @@
         display: flex;
         align-items: center;
         padding-top: 2rem;
+        background-color: red;
     }
 
     .button-text {
@@ -205,7 +224,7 @@
         cursor: pointer;
     }
 
-    .content-portion {
+    .semester-content-portion {
         display: flex;
         flex-direction: column;
         margin-top: 30px;
@@ -215,7 +234,7 @@
         font-family: "Montserrat", sans-serif;
     }
 
-    .content-question {
+    .semester-content-question {
         font-weight: 600;
         font-size: 20px;
         display: flex;
@@ -225,7 +244,7 @@
         cursor: pointer;
     }
 
-    .content-answer {
+    .semester-content-answer {
         padding: 10px 0 20px;
         font-size: 20px;
         font-weight: 400;
@@ -240,12 +259,21 @@
         border: none;
         cursor: pointer;
         border-radius: 30px;
+    }
+
+    .sem-acc {
+        display: grid;
+        gap: 25px;
+    }
+
+    .sub-answer-paragraph {
+        padding: 12px 0px;
     }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
-    .content-container {
+    .semester-content-container {
         background-color: #fff;
         display: grid;
         padding: 40px 70px;
@@ -255,12 +283,12 @@
         overflow: hidden;
     }
 
-    .content-part1 {
+    .semester-content-part1 {
         padding: 20px;
         position: relative;
     }
 
-    .content-part2 {
+    .semester-content-part2 {
         padding: 20px;
         /* overflow-y: auto; */
         /* max-height: 100vh; */
@@ -289,7 +317,7 @@
         cursor: pointer;
     }
 
-    .content-portion {
+    .semester-content-portion {
         display: flex;
         flex-direction: column;
         margin-top: 30px;
@@ -299,7 +327,7 @@
         font-family: "Montserrat", sans-serif;
     }
 
-    .content-question {
+    .semester-content-question {
         font-weight: 600;
         font-size: 20px;
         display: flex;
@@ -309,7 +337,7 @@
         cursor: pointer;
     }
 
-    .content-answer {
+    .semester-content-answer {
         padding: 10px 0 20px;
         font-size: 20px;
         font-weight: 400;
@@ -325,52 +353,58 @@
         cursor: pointer;
         border-radius: 30px;
     }
+
+    .sem-acc {
+        display: grid;
+        gap: 25px;
+    }
+
+    .sub-answer-paragraph {
+        padding: 12px 0px;
+    }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
-    .content-container {
+    .semester-content-container {
         background-color: #fff;
         display: flex;
         flex-direction: column;
         padding: 40px 70px;
         /* padding: 20px 40px; */
         grid-template-columns: 1fr 1.5fr;
-        
+
         gap: 20px;
         overflow: hidden;
     }
 
-    .content-part1 {
+    .semester-content-part1 {
         padding: 20px;
         position: relative;
     }
 
-    .content-part2 {
+    .semester-content-part2 {
         padding: 20px;
         /* overflow-y: auto; */
         /* max-height: 100vh; */
     }
 
-    .semester-title{
+    .semester-title {
         list-style: none;
         padding: 15px 0px 0px 0px;
         margin: 0;
         text-align: center;
         font-weight: 600;
         font-size: var(--);
-        
+
     }
 
-    .semester-list li {
+    /* .semester-list li {
         padding: 15px 0;
         font-size: 1rem;
         font-size: 24px;
         color: #575757;
-    }
-
-
-
+    } */
 
     .secondary-arrow-styles {
         width: 24px;
@@ -384,7 +418,7 @@
         cursor: pointer;
     }
 
-    .content-portion {
+    .semester-content-portion {
         display: flex;
         flex-direction: column;
         margin-top: 30px;
@@ -394,7 +428,7 @@
         font-family: "Montserrat", sans-serif;
     }
 
-    .content-question {
+    .semester-content-question {
         font-weight: 600;
         font-size: 20px;
         display: flex;
@@ -404,7 +438,7 @@
         cursor: pointer;
     }
 
-    .content-answer {
+    .semester-content-answer {
         padding: 10px 0 20px;
         font-size: 20px;
         font-weight: 400;
@@ -420,21 +454,23 @@
         cursor: pointer;
         border-radius: 30px;
     }
+
     .sem-acc {
         display: flex;
         justify-content: space-between;
-     
+
     }
-    .sub-answer-paragraph{
+
+    .sub-answer-paragraph {
         width: 50%;
         padding: 12px 0px;
         display: grid;
         gap: 10px;
 
     }
-    .answer-paragraph{
-        width: 50%;
-                padding: 12px 0px;
 
+    .semester-answer-paragraph {
+        width: 50%;
+        padding: 12px 0px;
     }
 }
